--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -127,14 +127,14 @@ body {
   justify-items: center;
 }
 
-h1,
+/* h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
   font-family: "Futura Std", Geneva, Tahoma, Verdana, sans-serif;
-}
+} */
 
 ul,
 li,
@@ -159,7 +159,7 @@ tbody {
 }
 
 main {
-  margin: 1rem auto;
+  margin: auto;
   max-width: 800px;
   display: grid;
   align-items: center;
@@ -216,6 +216,10 @@ li {
   color: var(--black);
 }
 
+.center {
+  margin: auto !important;
+}
+
 .NameGenerator {
   width: 100%;
   display: grid;
@@ -224,10 +228,7 @@ li {
   align-items: flex-start;
   justify-items: center;
 }
-.NameGenerator form {
-}
-.input-holder {
-}
+
 .input-holder label {
   display: block;
   margin-bottom: 0.2rem;
@@ -237,7 +238,42 @@ li {
 .input-holder input {
   display: block;
   border: 1px solid #e2e2e2;
-  padding: 10px;
+  padding: 7px;
+  margin-bottom: 0.5rem;
+  width: 400px;
+}
+
+.select-items {
+  display: block !important;
+  border: 1px solid #e2e2e2 !important;
+  padding: 7px !important;
+  margin-bottom: 0.5rem !important;
+  width: 400px !important;
+  align-items: center !important;
+}
+
+.select-selected {
+  display: block !important;
+  border: 1px solid #e2e2e2 !important;
+  padding: 7px !important;
+  margin-bottom: 0.5rem !important;
+  width: 400px !important;
+  align-items: center !important;
+}
+
+.input-holder select {
+  display: block !important;
+  border: 1px solid #e2e2e2 !important;
+  padding: 7px !important;
+  margin-bottom: 0.5rem !important;
+  width: 400px !important;
+  align-items: center !important;
+}
+
+.input-holder button {
+  display: block;
+  border: 1px solid #e2e2e2;
+  padding: 7px;
   margin-bottom: 0.5rem;
   width: 400px;
 }
@@ -253,4 +289,39 @@ li {
   padding: 1rem;
   border-radius: 15px;
   border: 1px solid #e2e2e2;
+}
+
+.NameVisualizer {
+  font-family: "Helvetica,sans-serif";
+  color: "#000000";
+  font-size: "16px";
+  justify-items: center;
+}
+
+input.error {
+  border-color: red;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
+    0 0 0 3px rgba(255, 0, 0, 0.1);
+}
+
+.input-feedback {
+  color: red;
+  margin-top: 0.25rem;
+  font-weight: bold;
+  font-size: 0.65rem;
+}
+
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed !important;
+}
+
+button + button {
+  margin-left: 0.5rem;
+}
+
+button.outline {
+  background-color: #eee;
+  border: 1px solid #aaa;
+  color: #555;
 }
