--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -252,22 +252,13 @@ li {
   align-items: center !important;
 }
 
-.select-selected {
-  display: block !important;
-  border: 1px solid #e2e2e2 !important;
-  padding: 7px !important;
-  margin-bottom: 0.5rem !important;
-  width: 400px !important;
-  align-items: center !important;
-}
-
 .input-holder select {
-  display: block !important;
-  border: 1px solid #e2e2e2 !important;
-  padding: 7px !important;
-  margin-bottom: 0.5rem !important;
-  width: 400px !important;
-  align-items: center !important;
+  display: block;
+  border: 1px solid #e2e2e2;
+  padding: 7px;
+  margin-bottom: 0.5rem;
+  width: 400px;
+  align-items: center;
 }
 
 .input-holder button {
