--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,7 +3,7 @@
  */
 html,
 body {
-  height: 100%;
+    height: 100%;
 }
 
 html,
@@ -11,167 +11,167 @@ body,
 input,
 textarea,
 button {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
 }
 
 /**
  * Header CSS
  */
 header {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 2;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 2;
 }
 
 header ul.mui-list--inline {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 header a {
-  color: white;
+    color: white;
 }
 
 header table {
-  width: 100%;
+    width: 100%;
 }
 
 /**
  * Layout CSS
  */
 #header {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 2;
-  transition: left 0.2s;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 2;
+    transition: left 0.2s;
 }
 .mui-appbar a {
-  color: #fff !important;
+    color: #fff !important;
 }
 #sidedrawer {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  width: 200px;
-  left: -200px;
-  overflow: auto;
-  z-index: 2;
-  background-color: #fff;
-  transition: transform 0.2s;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 200px;
+    left: -200px;
+    overflow: auto;
+    z-index: 2;
+    background-color: #fff;
+    transition: transform 0.2s;
 }
 
 .mui-container-fluid {
-  margin-top: 20px;
+    margin-top: 20px;
 }
 
 #content-wrapper {
-  min-height: 100%;
-  overflow-x: hidden;
-  margin-left: 200px;
-  margin-right: 200px;
-  transition: margin-left 0.2s;
+    min-height: 100%;
+    overflow-x: hidden;
+    margin-left: 200px;
+    margin-right: 200px;
+    transition: margin-left 0.2s;
 
-  /* sticky bottom */
-  box-sizing: border-box;
-  margin-bottom: -160px;
-  padding-bottom: 160px;
+    /* sticky bottom */
+    box-sizing: border-box;
+    margin-bottom: -160px;
+    padding-bottom: 160px;
 }
 
 #footer {
-  height: 160px;
-  margin-left: 0px;
-  transition: margin-left 0.2s;
+    height: 160px;
+    margin-left: 0px;
+    transition: margin-left 0.2s;
 }
 
 @media (min-width: 768px) {
-  #header {
-    left: 200px;
-  }
+    #header {
+        left: 200px;
+    }
 
-  #sidedrawer {
-    transform: translate(200px);
-  }
+    #sidedrawer {
+        transform: translate(200px);
+    }
 
-  /* #content-wrapper {
+    /* #content-wrapper {
     margin-left: 200px;
   } */
 
-  #footer {
-    margin-left: 200px;
-  }
+    #footer {
+        margin-left: 200px;
+    }
 
-  body.hide-sidedrawer #header {
-    left: 0;
-  }
+    body.hide-sidedrawer #header {
+        left: 0;
+    }
 
-  body.hide-sidedrawer #sidedrawer {
-    transform: translate(0px);
-  }
+    body.hide-sidedrawer #sidedrawer {
+        transform: translate(0px);
+    }
 
-  body.hide-sidedrawer #content-wrapper {
-    margin-left: 0;
-  }
+    body.hide-sidedrawer #content-wrapper {
+        margin-left: 0;
+    }
 
-  body.hide-sidedrawer #footer {
-    margin-left: 0;
-  }
+    body.hide-sidedrawer #footer {
+        margin-left: 0;
+    }
 }
 
 /**
  * Toggle Side drawer
  */
 #sidedrawer.active {
-  transform: translate(200px);
+    transform: translate(200px);
 }
 
 /**
  * Header CSS
  */
 .sidedrawer-toggle {
-  color: #fff;
-  cursor: pointer;
-  font-size: 20px;
-  line-height: 20px;
-  margin-right: 10px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 20px;
+    line-height: 20px;
+    margin-right: 10px;
 }
 
 .sidedrawer-toggle:hover {
-  color: #fff;
-  text-decoration: none;
+    color: #fff;
+    text-decoration: none;
 }
 
 /**
  * Footer CSS
  */
 #footer {
-  background-color: #0288d1;
-  color: #fff;
+    background-color: #0288d1;
+    color: #fff;
 }
 
 #footer a {
-  color: #fff;
-  text-decoration: underline;
+    color: #fff;
+    text-decoration: underline;
 }
 
 /**
  * Error
  */
 .input-feedback {
-  color: red;
-  font-weight: bold;
-  font-size: 0.65rem;
-  margin-top: -17px;
+    color: red;
+    font-weight: bold;
+    font-size: 0.65rem;
+    margin-top: -17px;
 }
 
 input.error {
-  border-color: red;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
-    0 0 0 3px rgba(255, 0, 0, 0.1);
+    border-color: red;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
+        0 0 0 3px rgba(255, 0, 0, 0.1);
 }
 
 /**
@@ -179,22 +179,36 @@ input.error {
  */
 
 .form-titles {
-  margin-bottom: 20px;
-  margin-top: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 ._hidden {
-  visibility: hidden;
+    visibility: hidden;
 }
 
 .pickerDiv {
-  padding: 7px;
-  margin-bottom: 0.5rem;
-  width: 100%;
+    padding: 7px;
+    margin-bottom: 0.5rem;
+    width: 100%;
 }
 
 .MuiFormControl-root-2 {
-  width: 100%;
-  padding: 7px;
-  margin-bottom: 0.5rem;
+    width: 100%;
+    padding: 7px;
+    margin-bottom: 0.5rem;
+}
+
+/* .divHelp {
+    position: relative;
+} */
+
+.icoHelp {
+    position: absolute;
+    right: 0;
+    top: 18px;
+}
+
+.divHelp {
+    position: relative;
 }
